tipado de scrud cupones

--- a/system_huellitas/views/admin/scrud_cupones.html
+++ b/system_huellitas/views/admin/scrud_cupones.html
@@ -182,7 +182,7 @@
             todo el espacio disponible y sino se ordenen 2 inputs a la par-->
             <div class="col-sm-12 col-md-6">
               <p class="fs-8 btn-orange-color fw-bold">Porcentaje</p>
-              <input type="text" class="form-control" placeholder="100%" aria-label="porcentaje"
+              <input type="number" class="form-control" placeholder="100%" aria-label="porcentaje"
                 id="Porcentaje_AgregarCuponFormulario" name="Porcentaje_AgregarCuponFormularioN">
             </div>
           </div>
@@ -230,7 +230,7 @@
             </div>
             <div class="col-sm-12 col-md-6">
               <p class="fs-8 btn-orange-color fw-bold"> Porcentaje</p>
-              <input type="text" class="form-control" placeholder="100%" aria-label="porcentaje">
+              <input type="number" class="form-control" placeholder="100%" aria-label="porcentaje">
             </div>
           </div>
           <br>
