permisos es más ancho

--- a/system_huellitas/views/admin/scrud_permisos.html
+++ b/system_huellitas/views/admin/scrud_permisos.html
@@ -122,7 +122,7 @@
 
 <!--Modal para el boton de agregar permiso-->
 <div class="modal" id="agPermiso" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
+  <div class="modal-dialog modal-lg">
     <form id="Formulario_AgregarPermisos" name="Formulario_AgregarPermisosN">
       <div class="modal-content">
         <div class="modal-header bg-orange-color">
@@ -236,7 +236,7 @@
 
 <!--Modal para el boton de actualizar permiso-->
 <div class="modal " id="actPermiso" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
+  <div class="modal-dialog modal-lg">
     <form id="Formulario_ActPermisos" name="Formulario_ActPermisosN">
       <div class="modal-content">
         <!-- El div que esta debajo del comentario indica el color de fondo del titulo del modal y el titulo -->
