Script de proce, trigger y func agregado aparte

--- a/system_huellitas/views/admin/scrud_pedidos.html
+++ b/system_huellitas/views/admin/scrud_pedidos.html
@@ -79,11 +79,11 @@
                     se pone arriba del </html pero fuera del body-->
                         </td>
                         <td>
-                            <button type="button" class="btn btn-danger img-fluid"><img
-                                    src="../../resources/img/png/eliminar_img_boton.png"
+                            <button type="button" class="btn btn-light img-fluid"><img
+                                    src="../../resources/img/svg/delete_icon.svg"
                                     class="tamanio_edicion_botones"></button>
-                            <button type="button" class="btn btn-warning img-fluid" data-bs-toggle="modal"
-                                data-bs-target="#InfoPedido"><img src="../../resources/img/png/editar_boton.png"
+                            <button type="button" class="btn btn-light img-fluid" data-bs-toggle="modal"
+                                data-bs-target="#InfoPedido"><img src="../../resources/img/svg/info_icon.svg"
                                     class="tamanio_edicion_botones"></button>
                             <!-- donde dice "data-bs-target" se indica el id del modal que se abrirá al darle click, el modal comunmente 
                     se pone arriba del </html pero fuera del body-->
@@ -102,11 +102,11 @@
                     se pone arriba del </html pero fuera del body-->
                         </td>
                         <td>
-                            <button type="button" class="btn btn-danger img-fluid"><img
-                                    src="../../resources/img/png/eliminar_img_boton.png"
+                            <button type="button" class="btn btn-light img-fluid"><img
+                                    src="../../resources/img/svg/delete_icon.svg"
                                     class="tamanio_edicion_botones"></button>
-                            <button type="button" class="btn btn-warning img-fluid" data-bs-toggle="modal"
-                                data-bs-target="#InfoPedido"><img src="../../resources/img/png/editar_boton.png"
+                            <button type="button" class="btn btn-light img-fluid" data-bs-toggle="modal"
+                                data-bs-target="#InfoPedido"><img src="../../resources/img/svg/info_icon.svg"
                                     class="tamanio_edicion_botones"></button>
                             <!-- donde dice "data-bs-target" se indica el id del modal que se abrirá al darle click, el modal comunmente 
                                       se pone arriba del </html pero fuera del body-->
@@ -125,11 +125,11 @@
                     se pone arriba del </html pero fuera del body-->
                         </td>
                         <td>
-                            <button type="button" class="btn btn-danger img-fluid"><img
-                                    src="../../resources/img/png/eliminar_img_boton.png"
+                            <button type="button" class="btn btn-light img-fluid"><img
+                                    src="../../resources/img/svg/delete_icon.svg"
                                     class="tamanio_edicion_botones"></button>
-                            <button type="button" class="btn btn-warning img-fluid" data-bs-toggle="modal"
-                                data-bs-target="#InfoPedido"><img src="../../resources/img/png/editar_boton.png"
+                            <button type="button" class="btn btn-light img-fluid" data-bs-toggle="modal"
+                                data-bs-target="#InfoPedido"><img src="../../resources/img/svg/info_icon.svg"
                                     class="tamanio_edicion_botones"></button>
                             <!-- donde dice "data-bs-target" se indica el id del modal que se abrirá al darle click, el modal comunmente 
                     se pone arriba del </html pero fuera del body-->
