--- a/system_huellitas/views/admin/settings.html
+++ b/system_huellitas/views/admin/settings.html
@@ -20,10 +20,10 @@
 
 <body>
     <!-- Encabezado de la página -->
-    <header class="container_one p-2S">
+    <header class="container_one">
         <!-- Insertar nuestro navbar a esta pantalla usando js -->
         <div id="navbar"></div>
-        <div class="container-fluid p-4 mt-3">
+        <div class="container-fluid p-2 mt-0">
             <!-- Sección del encabezado -->
         </div>
     </header>
