--- a/system_huellitas/views/admin/scrud_cupones.html
+++ b/system_huellitas/views/admin/scrud_cupones.html
@@ -92,9 +92,9 @@
               </div>
             </td>
             <td>
-              <button type="button" class="btn btn-danger img-fluid"><img src="../../resources/img/svg/delete_icon.svg"
+              <button type="button" class="btn btn-light img-fluid"><img src="../../resources/img/svg/delete_icon.svg"
                   class="tamanio_edicion_botones"></button>
-              <button type="button" class="btn btn-warning img-fluid" data-bs-toggle="modal"
+              <button type="button" class="btn btn-light img-fluid" data-bs-toggle="modal"
                 data-bs-target="#actCupon"><img src="../../resources/img/svg/info_icon.svg"
                   class="tamanio_edicion_botones"></button>
               <!-- donde dice "data-bs-target" se indica el id del modal que se abrirá al darle click, el modal comunmente 
@@ -114,9 +114,9 @@
               </div>
             </td>
             <td>
-              <button type="button" class="btn btn-danger img-fluid"><img src="../../resources/img/svg/delete_icon.svg"
+              <button type="button" class="btn btn-light img-fluid"><img src="../../resources/img/svg/delete_icon.svg"
                   class="tamanio_edicion_botones"></button>
-              <button type="button" class="btn btn-warning img-fluid" data-bs-toggle="modal"
+              <button type="button" class="btn btn-light img-fluid" data-bs-toggle="modal"
                 data-bs-target="#actCupon"><img src="../../resources/img/svg/info_icon.svg"
                   class="tamanio_edicion_botones"></button>
               <!-- Aqui se define si el check se le podrá cambiar la propiedad, aqui es una vista previa así que por motivos de diseño
@@ -136,9 +136,9 @@
               </div>
             </td>
             <td>
-              <button type="button" class="btn btn-danger img-fluid"><img src="../../resources/img/svg/delete_icon.svg"
+              <button type="button" class="btn btn-light img-fluid"><img src="../../resources/img/svg/delete_icon.svg"
                   class="tamanio_edicion_botones"></button>
-              <button type="button" class="btn btn-warning img-fluid" data-bs-toggle="modal"
+              <button type="button" class="btn btn-light img-fluid" data-bs-toggle="modal"
                 data-bs-target="#actCupon"><img src="../../resources/img/svg/info_icon.svg"
                   class="tamanio_edicion_botones"></button>
               <!-- Aqui se define si el check se le podrá cambiar la propiedad, aqui es una vista previa así que por motivos de diseño
