--- a/system_huellitas/views/admin/scrud_permisos.html
+++ b/system_huellitas/views/admin/scrud_permisos.html
@@ -78,9 +78,9 @@
             <!-- Esto si ya es contenido que cuando vaya conectado a db, será interactivo -->
             <td>Contador</td>
             <td>
-              <button type="button" class="btn btn-danger img-fluid" id="btnEliminar_Permisos"><img
+              <button type="button" class="btn btn-light img-fluid" id="btnEliminar_Permisos"><img
                   src="../../resources/img/svg/delete_icon.svg" class="tamanio_edicion_botones"></button>
-              <button type="button" class="btn btn-warning img-fluid" data-bs-toggle="modal"
+              <button type="button" class="btn btn-light img-fluid" data-bs-toggle="modal"
                 data-bs-target="#actPermiso" id="btnEditar_Permisos"><img src="../../resources/img/svg/info_icon.svg"
                   class="tamanio_edicion_botones"></button>
             </td>
@@ -88,9 +88,9 @@
           <tr>
             <td>Administrador</td>
             <td>
-              <button type="button" class="btn btn-danger img-fluid"><img src="../../resources/img/svg/delete_icon.svg"
+              <button type="button" class="btn btn-light img-fluid"><img src="../../resources/img/svg/delete_icon.svg"
                   class="tamanio_edicion_botones"></button>
-              <button type="button" class="btn btn-warning img-fluid" data-bs-toggle="modal"
+              <button type="button" class="btn btn-light img-fluid" data-bs-toggle="modal"
                 data-bs-target="#actPermiso"><img src="../../resources/img/svg/info_icon.svg"
                   class="tamanio_edicion_botones"></button>
               <!-- donde dice "data-bs-target" se indica el id del modal que se abrirá al darle click, el modal comunmente 
@@ -100,9 +100,9 @@
           <tr>
             <td>Vendedor</td>
             <td>
-              <button type="button" class="btn btn-danger img-fluid"><img src="../../resources/img/svg/delete_icon.svg"
+              <button type="button" class="btn btn-light img-fluid"><img src="../../resources/img/svg/delete_icon.svg"
                   class="tamanio_edicion_botones"></button>
-              <button type="button" class="btn btn-warning img-fluid" data-bs-toggle="modal"
+              <button type="button" class="btn btn-light img-fluid" data-bs-toggle="modal"
                 data-bs-target="#actPermiso"><img src="../../resources/img/svg/info_icon.svg"
                   class="tamanio_edicion_botones"></button>
             </td>
