Revisión de ortografia

--- a/system_huellitas/views/admin/scrud_cupones.html
+++ b/system_huellitas/views/admin/scrud_cupones.html
@@ -97,7 +97,7 @@
                                     src="../../resources/img/svg/delete_icon.svg"
                                     class="tamanio_edicion_botones"></button>
                             <button type="button" class="btn btn-light img-fluid" data-bs-toggle="modal"
-                                data-bs-target="#actCupon"><img src="../../resources/img/svg/info_icon.svg"
+                                data-bs-target="#actCupon"><img src="../../resources/img/svg/edit_icon.svg"
                                     class="tamanio_edicion_botones"></button>
                             <!-- donde dice "data-bs-target" se indica el id del modal que se abrirá al darle click, el modal comunmente 
                     se pone arriba del </html pero fuera del body-->
@@ -119,9 +119,9 @@
                             <button type="button" class="btn btn-light img-fluid"><img
                                     src="../../resources/img/svg/delete_icon.svg"
                                     class="tamanio_edicion_botones"></button>
-                            <button type="button" class="btn btn-light img-fluid" data-bs-toggle="modal"
-                                data-bs-target="#actCupon"><img src="../../resources/img/svg/info_icon.svg"
-                                    class="tamanio_edicion_botones"></button>
+                            <button type="button" class="btn btn-light" data-bs-toggle="modal"
+                                data-bs-target="#actCupon"><img src="../../resources/img/svg/edit_icon.svg"
+                                    width="35px"></button>
                             <!-- Aqui se define si el check se le podrá cambiar la propiedad, aqui es una vista previa así que por motivos de diseño
                   No lo habilitamos-->
                         </td>
@@ -143,7 +143,7 @@
                                     src="../../resources/img/svg/delete_icon.svg"
                                     class="tamanio_edicion_botones"></button>
                             <button type="button" class="btn btn-light img-fluid" data-bs-toggle="modal"
-                                data-bs-target="#actCupon"><img src="../../resources/img/svg/info_icon.svg"
+                                data-bs-target="#actCupon"><img src="../../resources/img/svg/edit_icon.svg"
                                     class="tamanio_edicion_botones"></button>
                             <!-- Aqui se define si el check se le podrá cambiar la propiedad, aqui es una vista previa así que por motivos de diseño
                   No lo habilitamos-->
