--- a/system_huellitas/views/admin/scrud_permisos.html
+++ b/system_huellitas/views/admin/scrud_permisos.html
@@ -84,7 +84,7 @@
                                     class="tamanio_edicion_botones"></button>
                             <button type="button" class="btn btn-light img-fluid" data-bs-toggle="modal"
                                 data-bs-target="#actPermiso" id="btnEditar_Permisos"><img
-                                    src="../../resources/img/svg/info_icon.svg"
+                                    src="../../resources/img/svg/edit_icon.svg"
                                     class="tamanio_edicion_botones"></button>
                         </td>
                     </tr>
@@ -95,7 +95,7 @@
                                     src="../../resources/img/svg/delete_icon.svg"
                                     class="tamanio_edicion_botones"></button>
                             <button type="button" class="btn btn-light img-fluid" data-bs-toggle="modal"
-                                data-bs-target="#actPermiso"><img src="../../resources/img/svg/info_icon.svg"
+                                data-bs-target="#actPermiso"><img src="../../resources/img/svg/edit_icon.svg"
                                     class="tamanio_edicion_botones"></button>
                             <!-- donde dice "data-bs-target" se indica el id del modal que se abrirá al darle click, el modal comunmente 
                     se pone arriba del </html pero fuera del body-->
@@ -108,7 +108,7 @@
                                     src="../../resources/img/svg/delete_icon.svg"
                                     class="tamanio_edicion_botones"></button>
                             <button type="button" class="btn btn-light img-fluid" data-bs-toggle="modal"
-                                data-bs-target="#actPermiso"><img src="../../resources/img/svg/info_icon.svg"
+                                data-bs-target="#actPermiso"><img src="../../resources/img/svg/edit_icon.svg"
                                     class="tamanio_edicion_botones"></button>
                         </td>
                     </tr>
@@ -148,7 +148,7 @@
                             <br>
                         </div>
                         <div class="col-12">
-                            <p class="fs-8 btn-orange-color fw-bold">Asigna los permisos que tendrá este tipo de permiso
+                            <p class="fs-8 btn-orange-color fw-bold">Asigna los permisos que tendrá esté tipo de permiso
                             </p>
                         </div>
                         <!-- EL div que esta debajo donde se dice col-sm-12 y col-sm-6 es para que los input usen
@@ -206,7 +206,7 @@
                                 <input class="form-check-input bg-orange-color" type="checkbox" role="switch"
                                     id="flexSwitchCheckChecked" checked>
                                 <label class="form-check-label" for="flexSwitchCheckChecked">Crear, editar
-                                    categorias</label>
+                                    categorías</label>
                             </div>
                         </div>
                         <div class="col-sm-12 col-md-6">
@@ -215,7 +215,7 @@
                                 name="SwBorrarCategorias_AgregarPermisosN">
                                 <input class="form-check-input bg-orange-color" type="checkbox" role="switch"
                                     id="flexSwitchCheckChecked" checked>
-                                <label class="form-check-label" for="flexSwitchCheckChecked">Borrar categorias</label>
+                                <label class="form-check-label" for="flexSwitchCheckChecked">Borrar categorías</label>
                             </div>
                         </div>
                         <div class="col-sm-12 col-md-6">
@@ -323,7 +323,7 @@
                                 <input class="form-check-input bg-orange-color" type="checkbox" role="switch"
                                     id="flexSwitchCheckChecked" checked>
                                 <label class="form-check-label" for="flexSwitchCheckChecked">Crear, editar
-                                    categorias</label>
+                                    categorías</label>
                             </div>
                         </div>
                         <div class="col-sm-12 col-md-6">
@@ -332,7 +332,7 @@
                                 name="SwBorrarCategorias_ActPermisosN">
                                 <input class="form-check-input bg-orange-color" type="checkbox" role="switch"
                                     id="flexSwitchCheckChecked" checked>
-                                <label class="form-check-label" for="flexSwitchCheckChecked">Borrar categorias</label>
+                                <label class="form-check-label" for="flexSwitchCheckChecked">Borrar categorías</label>
                             </div>
                         </div>
                         <div class="col-sm-12 col-md-6">
