--- a/system_huellitas/views/admin/scrud_pedidos.html
+++ b/system_huellitas/views/admin/scrud_pedidos.html
@@ -309,7 +309,7 @@
                             <label class="form-check-label" for="flexSwitchCheckChecked"
                                 id="Direccion_InformacionPedidos" name="Direccion_InformacionPedidosN">Calle las rosas,
                                 residencial 4,
-                                poligono 3A, casa #10</label>
+                                polígono 3A, casa #10</label>
                         </div>
                         <!-- Más información de la dirección -->
                         <br>
