--- a/system_huellitas/resources/scss/main.css
+++ b/system_huellitas/resources/scss/main.css
@@ -43,6 +43,7 @@
   --bs-red-color: rgb(249, 87, 56);
   --bs-yellow-color: rgb(244, 211, 94);
   --bs-gray-color: rgb(246, 243, 243);
+  --bs-beige-color: rgb(254, 246, 240);
   --bs-primary-rgb: 13, 110, 253;
   --bs-secondary-rgb: 108, 117, 125;
   --bs-success-rgb: 25, 135, 84;
@@ -56,6 +57,7 @@
   --bs-red-color-rgb: 249, 87, 56;
   --bs-yellow-color-rgb: 244, 211, 94;
   --bs-gray-color-rgb: 246, 243, 243;
+  --bs-beige-color-rgb: 254, 246, 240;
   --bs-primary-text-emphasis: #052c65;
   --bs-secondary-text-emphasis: #2b2f32;
   --bs-success-text-emphasis: #0a3622;
@@ -2977,7 +2979,7 @@ textarea.form-control-lg {
   border: var(--bs-btn-border-width) solid var(--bs-btn-border-color);
   border-radius: var(--bs-btn-border-radius);
   background-color: var(--bs-btn-bg);
-  background-image: transparent;
+  background-image: var(--bs-gradient);
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 @media (prefers-reduced-motion: reduce) {
@@ -3247,6 +3249,23 @@ textarea.form-control-lg {
   --bs-btn-disabled-border-color: rgb(246, 243, 243);
 }
 
+.btn-beige-color {
+  --bs-btn-color: #000;
+  --bs-btn-bg: rgb(254, 246, 240);
+  --bs-btn-border-color: rgb(254, 246, 240);
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: #fef7f2;
+  --bs-btn-hover-border-color: #fef7f2;
+  --bs-btn-focus-shadow-rgb: 216, 209, 204;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: #fef8f3;
+  --bs-btn-active-border-color: #fef7f2;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #000;
+  --bs-btn-disabled-bg: rgb(254, 246, 240);
+  --bs-btn-disabled-border-color: rgb(254, 246, 240);
+}
+
 .btn-outline-primary {
   --bs-btn-color: #0d6efd;
   --bs-btn-border-color: #0d6efd;
@@ -3465,6 +3484,23 @@ textarea.form-control-lg {
   --bs-btn-disabled-color: rgb(246, 243, 243);
   --bs-btn-disabled-bg: transparent;
   --bs-btn-disabled-border-color: rgb(246, 243, 243);
+  --bs-gradient: none;
+}
+
+.btn-outline-beige-color {
+  --bs-btn-color: rgb(254, 246, 240);
+  --bs-btn-border-color: rgb(254, 246, 240);
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: rgb(254, 246, 240);
+  --bs-btn-hover-border-color: rgb(254, 246, 240);
+  --bs-btn-focus-shadow-rgb: 254, 246, 240;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: rgb(254, 246, 240);
+  --bs-btn-active-border-color: rgb(254, 246, 240);
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: rgb(254, 246, 240);
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: rgb(254, 246, 240);
   --bs-gradient: none;
 }
 
@@ -5138,6 +5174,13 @@ textarea.form-control-lg {
   --bs-alert-link-color: var(--bs-gray-color-text-emphasis);
 }
 
+.alert-beige-color {
+  --bs-alert-color: var(--bs-beige-color-text-emphasis);
+  --bs-alert-bg: var(--bs-beige-color-bg-subtle);
+  --bs-alert-border-color: var(--bs-beige-color-border-subtle);
+  --bs-alert-link-color: var(--bs-beige-color-text-emphasis);
+}
+
 @keyframes progress-bar-stripes {
   0% {
     background-position-x: 1rem;
@@ -5606,6 +5649,19 @@ textarea.form-control-lg {
   --bs-list-group-active-color: var(--bs-gray-color-bg-subtle);
   --bs-list-group-active-bg: var(--bs-gray-color-text-emphasis);
   --bs-list-group-active-border-color: var(--bs-gray-color-text-emphasis);
+}
+
+.list-group-item-beige-color {
+  --bs-list-group-color: var(--bs-beige-color-text-emphasis);
+  --bs-list-group-bg: var(--bs-beige-color-bg-subtle);
+  --bs-list-group-border-color: var(--bs-beige-color-border-subtle);
+  --bs-list-group-action-hover-color: var(--bs-emphasis-color);
+  --bs-list-group-action-hover-bg: var(--bs-beige-color-border-subtle);
+  --bs-list-group-action-active-color: var(--bs-emphasis-color);
+  --bs-list-group-action-active-bg: var(--bs-beige-color-border-subtle);
+  --bs-list-group-active-color: var(--bs-beige-color-bg-subtle);
+  --bs-list-group-active-bg: var(--bs-beige-color-text-emphasis);
+  --bs-list-group-active-border-color: var(--bs-beige-color-text-emphasis);
 }
 
 .btn-close {
@@ -7171,6 +7227,11 @@ textarea.form-control-lg {
   background-color: RGBA(var(--bs-gray-color-rgb), var(--bs-bg-opacity, 1)) !important;
 }
 
+.text-bg-beige-color {
+  color: #000 !important;
+  background-color: RGBA(var(--bs-beige-color-rgb), var(--bs-bg-opacity, 1)) !important;
+}
+
 .link-primary {
   color: RGBA(var(--bs-primary-rgb), var(--bs-link-opacity, 1)) !important;
   text-decoration-color: RGBA(var(--bs-primary-rgb), var(--bs-link-underline-opacity, 1)) !important;
@@ -7286,6 +7347,15 @@ textarea.form-control-lg {
 .link-gray-color:hover, .link-gray-color:focus {
   color: RGBA(248, 245, 245, var(--bs-link-opacity, 1)) !important;
   text-decoration-color: RGBA(248, 245, 245, var(--bs-link-underline-opacity, 1)) !important;
+}
+
+.link-beige-color {
+  color: RGBA(var(--bs-beige-color-rgb), var(--bs-link-opacity, 1)) !important;
+  text-decoration-color: RGBA(var(--bs-beige-color-rgb), var(--bs-link-underline-opacity, 1)) !important;
+}
+.link-beige-color:hover, .link-beige-color:focus {
+  color: RGBA(254, 248, 243, var(--bs-link-opacity, 1)) !important;
+  text-decoration-color: RGBA(254, 248, 243, var(--bs-link-underline-opacity, 1)) !important;
 }
 
 .link-body-emphasis {
@@ -7744,6 +7814,10 @@ textarea.form-control-lg {
   --bs-focus-ring-color: rgba(var(--bs-gray-color-rgb), var(--bs-focus-ring-opacity));
 }
 
+.focus-ring-beige-color {
+  --bs-focus-ring-color: rgba(var(--bs-beige-color-rgb), var(--bs-focus-ring-opacity));
+}
+
 .position-static {
   position: static !important;
 }
@@ -7927,6 +8001,11 @@ textarea.form-control-lg {
 .border-gray-color {
   --bs-border-opacity: 1;
   border-color: rgba(var(--bs-gray-color-rgb), var(--bs-border-opacity)) !important;
+}
+
+.border-beige-color {
+  --bs-border-opacity: 1;
+  border-color: rgba(var(--bs-beige-color-rgb), var(--bs-border-opacity)) !important;
 }
 
 .border-black {
@@ -8911,6 +8990,11 @@ textarea.form-control-lg {
   color: rgba(var(--bs-gray-color-rgb), var(--bs-text-opacity)) !important;
 }
 
+.text-beige-color {
+  --bs-text-opacity: 1;
+  color: rgba(var(--bs-beige-color-rgb), var(--bs-text-opacity)) !important;
+}
+
 .text-black {
   --bs-text-opacity: 1;
   color: rgba(var(--bs-black-rgb), var(--bs-text-opacity)) !important;
@@ -9138,6 +9222,11 @@ textarea.form-control-lg {
   text-decoration-color: rgba(var(--bs-gray-color-rgb), var(--bs-link-underline-opacity)) !important;
 }
 
+.link-underline-beige-color {
+  --bs-link-underline-opacity: 1;
+  text-decoration-color: rgba(var(--bs-beige-color-rgb), var(--bs-link-underline-opacity)) !important;
+}
+
 .link-underline {
   --bs-link-underline-opacity: 1;
   text-decoration-color: rgba(var(--bs-link-color-rgb), var(--bs-link-underline-opacity, 1)) !important;
@@ -9254,6 +9343,11 @@ textarea.form-control-lg {
 .bg-gray-color {
   --bs-bg-opacity: 1;
   background-color: rgba(var(--bs-gray-color-rgb), var(--bs-bg-opacity)) !important;
+}
+
+.bg-beige-color {
+  --bs-bg-opacity: 1;
+  background-color: rgba(var(--bs-beige-color-rgb), var(--bs-bg-opacity)) !important;
 }
 
 .bg-black {
