Pantalla de recuperacion de contrasenia

--- a/system_huellitas/views/admin/index_admin.html
+++ b/system_huellitas/views/admin/index_admin.html
@@ -54,6 +54,7 @@
                     <!-- Boton para ingresar, d-grid gap-2 toma todo el espacio horizontal de la col-->
                     <div class="d-grid gap-2 mt-5">
                         <a id="loginButton" class="btn btn-orange-color text-light p-2 rounded-3" href="#">Ingresar</a>
+                        <a class="fw-light text-decoration-none text-dark fs-6 text-center" href="../admin/recuperacion_contra_1.html">¿Has olvidado tú contraseña?</a>
                     </div>
                 </form>
             </div>
