Cambios en recuperacion de contraseña

--- a/system_huellitas/views/admin/recuperacion_contra_1.html
+++ b/system_huellitas/views/admin/recuperacion_contra_1.html
@@ -20,18 +20,18 @@
                 <div class="col-6 d-flex align-items-center">
                     <img src="../../resources/img/svg/recovery_password.svg" class="img-fluid">
                 </div>
-                <div class="col-auto d-flex justify-content-center">
+                <div class="col-auto d-flex justify-content-center p-4">
                     <div>
                         <h2 class="fw-semibold text-center">Recuperar contraseña</h2>
-                        <p class="fw-normal text-center mb-5">Ingresa tu correo electronico asociado a tu cuenta.</p>
+                        <p class="fw-normal text-center">Ingresa tu correo electronico asociado a tu cuenta.</p>
                         <div class="container p-5">
                             <form action="">
-                                <div class="mb-5">
+                                <div>
                                     <label for="password_login" class="form-label">Correo electrónico</label>
                                     <input type="password" class="form-control bg-white p-2 shadow rounded-3"
                                         id="password_login" name="passwordLogin">
                                 </div>
-                                <div class="d-grid gap-2 p-2">
+                                <div class="d-grid gap-2 mt-5">
                                     <a class="btn btn-orange-color text-light p-2 rounded-3"
                                         href="../admin/recuperacion_contra_2.html">Envíar código</a>
                                     <div class="fw-semibold text-decoration-none text-dark text-center form-text">
