Pantallas de recuperación de contraseña

--- a/system_huellitas/views/admin/recuperacion_contra_1.html
+++ b/system_huellitas/views/admin/recuperacion_contra_1.html
@@ -23,13 +23,13 @@
                 <div class="col-auto d-flex justify-content-center p-4">
                     <div>
                         <h2 class="fw-semibold text-center">Recuperar contraseña</h2>
-                        <p class="fw-normal text-center">Ingresa tu correo electronico asociado a tu cuenta.</p>
-                        <div class="container p-5">
-                            <form action="">
+                        <p class="fw-normal text-center">Ingresa tu correo electrónico asociado a tu cuenta.</p>
+                        <div class="container p-5 ">
+                            <form action="" id="recuperacion_contra_1">
                                 <div>
-                                    <label for="password_login" class="form-label">Correo electrónico</label>
-                                    <input type="password" class="form-control bg-white p-2 shadow rounded-3"
-                                        id="password_login" name="passwordLogin">
+                                    <label for="email_recuperacion" class="form-label">Correo electrónico</label>
+                                    <input type="email" class="form-control bg-white p-2 shadow rounded-3"
+                                        id="email_recuperacion" name="emailRecuperacion">
                                 </div>
                                 <div class="d-grid gap-2 mt-5">
                                     <a class="btn btn-orange-color text-light p-2 rounded-3"
