--- a/system_huellitas/views/admin/scrud_cupones.html
+++ b/system_huellitas/views/admin/scrud_cupones.html
@@ -187,7 +187,7 @@
             todo el espacio disponible y sino se ordenen 2 inputs a la par-->
                         <div class="col-sm-12 col-md-6">
                             <p class="fs-8 btn-orange-color fw-bold">Porcentaje</p>
-                            <input type="number" class="form-control" placeholder="100%" aria-label="porcentaje"
+                            <input type="number" min="1" max="100" class="form-control" placeholder="100%" aria-label="porcentaje"
                                 id="Porcentaje_AgregarCuponFormulario" name="Porcentaje_AgregarCuponFormularioN">
                         </div>
                     </div>
@@ -237,7 +237,7 @@
                         </div>
                         <div class="col-sm-12 col-md-6">
                             <p class="fs-8 btn-orange-color fw-bold"> Porcentaje</p>
-                            <input type="number" class="form-control" placeholder="100%" aria-label="porcentaje">
+                            <input type="number" min="1" max="100" class="form-control" placeholder="100%" aria-label="porcentaje">
                         </div>
                     </div>
                     <br>
