Pantallas de recuperación de contraseñas completadas

--- a/system_huellitas/views/admin/recuperacion_contra_1.html
+++ b/system_huellitas/views/admin/recuperacion_contra_1.html
@@ -28,7 +28,7 @@
                             <form action="" id="recuperacion_contra_1">
                                 <div>
                                     <label for="email_recuperacion" class="form-label">Correo electrónico</label>
-                                    <input type="email" class="form-control bg-white p-2 shadow rounded-3"
+                                    <input type="email" class="form-control form-control-lg bg-white p-2 shadow rounded-3"
                                         id="email_recuperacion" name="emailRecuperacion">
                                 </div>
                                 <div class="d-grid gap-2 mt-5">
