--- a/system_huellitas/views/admin/recuperacion_contra_2.html
+++ b/system_huellitas/views/admin/recuperacion_contra_2.html
@@ -23,12 +23,13 @@
                 <div class="col-auto d-flex justify-content-center p-4">
                     <div>
                         <h2 class="fw-semibold text-center">Recuperar contraseña</h2>
-                        <p class="fw-normal text-center">Ingresa el código enviado a tu correo</p>
+                        <p class="fw-normal text-center">Ingresa el código envíado a tu correo</p>
                         <div class="container p-5">
                             <form action="" id="recuperacion_contra_2">
                                 <div>
                                     <label for="codigo_recuperacion" class="form-label">Código</label>
-                                    <input type="number" min="1" max="99999" class="form-control bg-white p-2 shadow rounded-3"
+                                    <input type="number" min="1" max="99999"
+                                        class="form-control form-control-lg bg-white p-2 shadow rounded-3"
                                         id="codigo_recuperacion" name="codigoRecuperacion">
                                 </div>
                                 <div class="d-grid gap-2 mt-5">
