--- a/system_huellitas/views/admin/recuperacion_contra_3.html
+++ b/system_huellitas/views/admin/recuperacion_contra_3.html
@@ -20,28 +20,31 @@
                 <div class="col-6 d-flex align-items-center">
                     <img src="../../resources/img/svg/recovery_password.svg" class="img-fluid">
                 </div>
-                <div class="col-auto d-flex justify-content-center p-4">
+                <div class="col-6 d-flex justify-content-center p-4">
                     <div>
                         <h2 class="fw-semibold text-center">Recuperar contraseña</h2>
                         <p class="fw-normal text-center">Ingresa la nueva contraseña</p>
                         <div class="container p-5">
                             <form action="" id="recuperacion_contra_3">
-                                <div  class="mb-4">
+                                <div class="mb-4">
                                     <label for="Npass1_recuperacion" class="form-label">Nueva contraseña</label>
-                                    <input type="password" class="form-control bg-white p-2 shadow rounded-3"
-                                        id="nueva_contra1_recuperacion" name="nuevacontra1recuperacion">
+                                    <input type="password"
+                                        class="form-control  form-control-lg bg-white p-2 shadow rounded-3"
+                                        id="Npass1_recuperacion" name="Npass1Recuperacio">
                                 </div>
                                 <div>
-                                    <label for="Npass2_recuperacion" class="form-label">Escriba de nuevo la contraseña</label>
-                                    <input type="password" class="form-control bg-white p-2 shadow rounded-3"
-                                        id="nueva_contra2_recuperacion" name="nuevacontra2recuperacion">
+                                    <label for="Npass2_recuperacion" class="form-label">Escriba la nueva
+                                        contraseña</label>
+                                    <input type="password"
+                                        class="form-control bg-white form-control-lg p-2 shadow rounded-3"
+                                        id="Npass2_recuperacion" name="Npass2Recuperacion">
                                 </div>
                                 <div class="d-grid gap-2 mt-5">
                                     <a class="btn btn-orange-color text-light p-2 rounded-3"
-                                        href="../admin/index_admin.html">Recuperar</a>
-                                        <div class="fw-semibold text-decoration-none text-dark text-center form-text">
-                                            Guarda tu contraseña en algún lugar seguro
-                                        </div>
+                                        href="../admin/index_admin.html">Envíar</a>
+                                    <div class="fw-semibold text-decoration-none text-dark text-center form-text">
+                                        Guarda siempre tu contraseña en algún lugar seguro y no la olvides.
+                                    </div>
                                 </div>
                             </form>
                         </div>
