--- a/system_huellitas/views/admin/recuperacion_contra_3.html
+++ b/system_huellitas/views/admin/recuperacion_contra_3.html
@@ -17,15 +17,21 @@
     <main>
         <div class="container-fluid">
             <div class="row justify-content-center align-items-center">
+                <!--Se pone la imagen que acompañará el formulario, es importante observar que existirán 2 columnas que ocuparán 
+                6 y 6 espacios de la pantalla-->
                 <div class="col-6 d-flex align-items-center">
                     <img src="../../resources/img/svg/recovery_password.svg" class="img-fluid">
                 </div>
                 <div class="col-6 d-flex justify-content-center p-4">
                     <div>
+                         <!--Centramos el texto y lo ponemos en negrita-->
                         <h2 class="fw-semibold text-center">Recuperar contraseña</h2>
+                        <!--Ponemos el texto en menor tamaño y centrado respecto a su columna-->
                         <p class="fw-normal text-center">Ingresa la nueva contraseña</p>
                         <div class="container p-5">
-                            <form action="" id="recuperacion_contra_3">
+                            <!--Le damos nombre con id y name al form para luego utilizarlo en el backend-->
+                            <form action="" id="recuperacion_contra_3" name="recuperacioncontra3">
+                                <!--En este div se encuentra el input, el tipo de contenido del input, el label que esta arriba del input y la longitud del input-->
                                 <div class="mb-4">
                                     <label for="Npass1_recuperacion" class="form-label">Nueva contraseña</label>
                                     <input type="password"
@@ -33,12 +39,14 @@
                                         id="Npass1_recuperacion" name="Npass1Recuperacio">
                                 </div>
                                 <div>
+                                    <!--En este div se encuentra el input, el tipo de contenido del input, el label que esta arriba del input y la longitud del input-->
                                     <label for="Npass2_recuperacion" class="form-label">Escriba la nueva
                                         contraseña</label>
                                     <input type="password"
                                         class="form-control bg-white form-control-lg p-2 shadow rounded-3"
                                         id="Npass2_recuperacion" name="Npass2Recuperacion">
                                 </div>
+                                 <!--En este div se encuentra el boton de enviar cambiar contraseña, la página adonde redirecciona y el texto que esta debajo del botón-->
                                 <div class="d-grid gap-2 mt-5">
                                     <a class="btn btn-orange-color text-light p-2 rounded-3"
                                         href="../admin/index_admin.html">Envíar</a>
