Cambio de un label

--- a/system_huellitas/views/admin/recuperacion_contra_1.html
+++ b/system_huellitas/views/admin/recuperacion_contra_1.html
@@ -34,7 +34,8 @@
                                 <!--En este div se encuentra el input, el tipo de contenido del input, el label que esta arriba del input y la longitud del input-->
                                 <div>
                                     <label for="email_recuperacion" class="form-label">Correo electrónico</label>
-                                    <input type="email" class="form-control form-control-lg bg-white p-2 shadow rounded-3"
+                                    <input type="email"
+                                        class="form-control form-control-lg bg-white p-2 shadow rounded-3"
                                         id="email_recuperacion" name="emailRecuperacion">
                                 </div>
                                 <!--En este div se encuentra el boton de enviar código, la página adonde redirecciona y el texto que esta debajo del botón-->
