--- a/system_huellitas/views/admin/recuperacion_contra_3.html
+++ b/system_huellitas/views/admin/recuperacion_contra_3.html
@@ -24,7 +24,7 @@
                 </div>
                 <div class="col-6 d-flex justify-content-center p-4">
                     <div>
-                         <!--Centramos el texto y lo ponemos en negrita-->
+                        <!--Centramos el texto y lo ponemos en negrita-->
                         <h2 class="fw-semibold text-center">Recuperar contraseña</h2>
                         <!--Ponemos el texto en menor tamaño y centrado respecto a su columna-->
                         <p class="fw-normal text-center">Ingresa la nueva contraseña</p>
@@ -40,13 +40,13 @@
                                 </div>
                                 <div>
                                     <!--En este div se encuentra el input, el tipo de contenido del input, el label que esta arriba del input y la longitud del input-->
-                                    <label for="Npass2_recuperacion" class="form-label">Escriba la nueva
+                                    <label for="Npass2_recuperacion" class="form-label">Confirmación de
                                         contraseña</label>
                                     <input type="password"
                                         class="form-control bg-white form-control-lg p-2 shadow rounded-3"
                                         id="Npass2_recuperacion" name="Npass2Recuperacion">
                                 </div>
-                                 <!--En este div se encuentra el boton de enviar cambiar contraseña, la página adonde redirecciona y el texto que esta debajo del botón-->
+                                <!--En este div se encuentra el boton de enviar cambiar contraseña, la página adonde redirecciona y el texto que esta debajo del botón-->
                                 <div class="d-grid gap-2 mt-5">
                                     <a class="btn btn-orange-color text-light p-2 rounded-3"
                                         href="../admin/index_admin.html">Envíar</a>
